# bevy_kira_audio

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: bevy_main.yml  ci.yml
assets/sounds/: loop_with_settings.ogg.ron  semantic_duration.ogg.ron
examples/: README.md  basic.rs  channel.rs  channel_control.rs  custom_channel.rs  dynamic_channels.rs  filter.rs  filter_basic.rs  instance_control.rs  multiple_channels.rs  multiple_effects.rs  multiple_effects_channel.rs  reverb.rs  reverb_channel.rs  semantic_duration.rs  settings.rs  settings_loader.rs  spacial.rs  spatial.rs  status.rs  stream.rs  stress_test.rs
src/: audio.rs  audio_output.rs  audio_source.rs  backend_settings.rs  channel.rs  instance.rs  lib.rs  settings.rs  spacial.rs  spatial.rs  stream.rs  systems.rs
src/channel/: dynamic.rs  typed.rs
src/source/: flac_loader.rs  mod.rs  mp3_loader.rs  ogg_loader.rs  settings_loader.rs  spec_loader.rs  wav_loader.rs
