[package]
name = "bevy_kira_audio"
version = "0.24.0"
authors = ["Niklas Eicker <hello@nikl.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for dynamic audio"
repository = "https://github.com/NiklasEi/bevy_kira_audio"
homepage = "https://github.com/NiklasEi/bevy_kira_audio"
documentation = "https://docs.rs/bevy_kira_audio"
keywords = ["bevy", "gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "./README.md"
rust-version = "1.88"

[features]
default = ["ogg"]
flac = ["kira/flac"]
mp3 = ["kira/mp3"]
ogg = ["kira/ogg"]
wav = ["kira/wav"]
settings_loader = ["dep:ron", "dep:serde", "kira/serde"]
android_shared_stdcxx = ["kira/android_shared_stdcxx"]

[dependencies]
bevy = { version = "0.17.0", default-features = false, features = ["std", "bevy_asset", "bevy_log"] }
bevy_math = { version = "0.17.0" }
anyhow = "1.0"
uuid = { version = "1", features = ["fast-rng"] }
kira = { version = "0.10.8", default-features = false, features = ["cpal"] }
ron = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
parking_lot = "0.12"
thiserror = "2"
mint = "0.5.9"
glam = "0.25.0"

[dev-dependencies.bevy]
version = "0.17.0"
default-features = false
# default features minus "bevy_audio", "android_shared_stdcxx", and "vorbis"
features = [
"std",
"async_executor",
"android-game-activity",
"animation",
"bevy_asset",
"bevy_color",
"bevy_core_pipeline",
"bevy_post_process",
"bevy_anti_alias",
"bevy_gilrs",
"bevy_gizmos",
"bevy_gltf",
"bevy_input_focus",
"bevy_log",
"bevy_mesh_picking_backend",
"bevy_pbr",
"bevy_picking",
"bevy_render",
"bevy_scene",
"bevy_image",
"bevy_mesh",
"bevy_camera",
"bevy_light",
"bevy_shader",
"bevy_sprite",
"bevy_sprite_picking_backend",
"bevy_sprite_render",
"bevy_state",
"bevy_text",
"bevy_ui",
"bevy_ui_picking_backend",
"bevy_ui_render",
"bevy_window",
"bevy_winit",
"custom_cursor",
"default_font",
"hdr",
"ktx2",
"multi_threaded",
"png",
"reflect_auto_register",
"smaa_luts",
"sysinfo_plugin",
"tonemapping_luts",
"webgl2",
"x11",
"wayland",
"debug",
"zstd_rust",
]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["ogg"]

[[example]]
name = "custom_channel"
path = "examples/custom_channel.rs"
required-features = ["ogg"]

[[example]]
name = "multiple_channels"
path = "examples/multiple_channels.rs"
required-features = ["ogg"]

[[example]]
name = "status"
path = "examples/status.rs"
required-features = ["ogg"]

[[example]]
name = "settings_loader"
path = "examples/settings_loader.rs"
required-features = ["ogg", "settings_loader"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = ["ogg"]

[[example]]
name = "settings"
path = "examples/settings.rs"
required-features = ["ogg"]

[[example]]
name = "instance_control"
path = "examples/instance_control.rs"
required-features = ["ogg"]

[[example]]
name = "channel_control"
path = "examples/channel_control.rs"
required-features = ["ogg"]

[[example]]
name = "spatial"
path = "examples/spatial.rs"
required-features = ["ogg"]
