[package]
name = "bevy_kira_audio"
version = "0.25.0"
authors = ["Niklas Eicker <hello@nikl.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for dynamic audio"
repository = "https://github.com/NiklasEi/bevy_kira_audio"
homepage = "https://github.com/NiklasEi/bevy_kira_audio"
documentation = "https://docs.rs/bevy_kira_audio"
keywords = ["bevy", "gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "./README.md"
rust-version = "1.88"

[features]
default = ["ogg"]
flac = ["kira/flac"]
mp3 = ["kira/mp3"]
ogg = ["kira/ogg"]
wav = ["kira/wav"]
settings_loader = ["dep:ron", "dep:serde", "kira/serde"]
android_shared_stdcxx = ["kira/android_shared_stdcxx"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["std", "bevy_asset", "bevy_log"] }
bevy_math = { version = "0.18.0" }
anyhow = "1.0"
uuid = { version = "1", features = ["fast-rng"] }
kira = { version = "0.10.8", default-features = false, features = ["cpal"] }
ron = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
parking_lot = "0.12"
thiserror = "2"
mint = "0.5.9"
glam = "0.25.0"

[dev-dependencies.bevy]
version = "0.18.0"
default-features = false
# default features minus "bevy_audio", "android_shared_stdcxx", and "vorbis"
features = [
"default_app",
"2d_api",
"2d_bevy_render",
"3d_api",
"3d_bevy_render",
"ui_api",
"ui_bevy_render",
"scene",
"picking",
"bevy_gilrs",
"bevy_winit",
"default_font",
"multi_threaded",
"webgl2",
"x11",
"wayland",
"sysinfo_plugin",
]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["ogg"]

[[example]]
name = "custom_channel"
path = "examples/custom_channel.rs"
required-features = ["ogg"]

[[example]]
name = "multiple_channels"
path = "examples/multiple_channels.rs"
required-features = ["ogg"]

[[example]]
name = "status"
path = "examples/status.rs"
required-features = ["ogg"]

[[example]]
name = "settings_loader"
path = "examples/settings_loader.rs"
required-features = ["ogg", "settings_loader"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = ["ogg"]

[[example]]
name = "settings"
path = "examples/settings.rs"
required-features = ["ogg"]

[[example]]
name = "instance_control"
path = "examples/instance_control.rs"
required-features = ["ogg"]

[[example]]
name = "channel_control"
path = "examples/channel_control.rs"
required-features = ["ogg"]

[[example]]
name = "spatial"
path = "examples/spatial.rs"
required-features = ["ogg"]
